--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f5839f">  <td>23/06/26 14:03:06</td>   <td>0</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@53fb3dab]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="f5839f">  <td>23/06/26 14:02:48</td>   <td>-18406</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@53fb3dab]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="bbf48f">  <td>23/06/26 14:02:59</td>   <td>-7020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.test1()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@53fb3dab]">test1</td> 
-  <td>main@116734858</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/04 10:57:45</td>   <td>0</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@33065d67]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106592975</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/04 10:56:58</td>   <td>-46987</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@33065d67]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106592975</td>   <td></td> </tr>
+<tr bgcolor="bbf48f">  <td>23/07/04 10:57:19</td>   <td>-26236</td> <td>&nbsp;</td><td title="&gt;&gt;FirstTest.test1()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@33065d67]">&gt;&gt;test1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2106592975</td>   <td></td> </tr>
+<tr bgcolor="bbf48f">  <td>23/07/04 10:57:35</td>   <td>-10609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.test1()[pri:0, instance:AutomationTesting_1.auttomation_1.FirstTest@33065d67]">test1</td> 
+  <td>main@2106592975</td>   <td></td> </tr>
 </table>
