--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbf48f">  <td>23/07/08 12:02:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LocatorExample.testlocators()[pri:0, instance:AutomationTesting_1.auttomation_1.LocatorExample@53fb3dab]">testlocators</td> 
-  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="f5839f">  <td>23/07/08 12:02:13</td>   <td>-14270</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.LocatorExample@53fb3dab]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="f5839f">  <td>23/07/08 12:03:27</td>   <td>59666</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.LocatorExample@53fb3dab]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
+<tr bgcolor="bbf48f">  <td>23/07/09 11:12:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="webElementexample.webElementsTest()[pri:0, instance:AutomationTesting_1.auttomation_1.webElementexample@53fb3dab]">webElementsTest</td> 
+  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/09 11:13:16</td>   <td>20550</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.webElementexample@53fb3dab]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/09 11:12:47</td>   <td>-8317</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.webElementexample@53fb3dab]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1551945522</td>   <td></td> </tr>
 </table>
