--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-1629622998\testng-customsuite.xml</span>
+                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--2037101371\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-1629622998\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--2037101371\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'webElementsTest')
 data.setCell(0, 2, 'AutomationTesting_1.auttomation_1.webElementexample')
-data.setCell(0, 3, 22315);
+data.setCell(0, 3, 78538);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,11 +227,11 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">webElementsTest</span>
-                <span class="method-start">9837 ms</span>
+                <span class="method-start">12562 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">close</span>
-                <span class="method-start">32197 ms</span>
+                <span class="method-start">91160 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
