--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--1042394419\testng-customsuite.xml</span>
+                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--891202149\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationTesting_1.auttomation_1.NavigateExample" class="method navigator-link" hash-for-method="navigate">navigate</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationTesting_1.auttomation_1.Alert" class="method navigator-link" hash-for-method="AlertTest">AlertTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AutomationTesting_1.auttomation_1.NavigateExample</span>
+              <span class="class-name">AutomationTesting_1.auttomation_1.Alert</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="navigate">
-                  </a> <!-- navigate -->
-                  <span class="method-name">navigate</span>
+                  <a name="AlertTest">
+                  </a> <!-- AlertTest -->
+                  <span class="method-name">AlertTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--1042394419\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse--891202149\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AutomationTesting_1.auttomation_1.NavigateExample&quot;/&gt;
+      &lt;class name=&quot;AutomationTesting_1.auttomation_1.Alert&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'navigate')
-data.setCell(0, 2, 'AutomationTesting_1.auttomation_1.NavigateExample')
-data.setCell(0, 3, 38462);
+data.setCell(0, 1, 'AlertTest')
+data.setCell(0, 2, 'AutomationTesting_1.auttomation_1.Alert')
+data.setCell(0, 3, 14256);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +220,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AutomationTesting_1.auttomation_1.NavigateExample</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AutomationTesting_1.auttomation_1.Alert</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">start</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">navigate</span>
-                <span class="method-start">11020 ms</span>
+                <span class="method-name">AlertTest</span>
+                <span class="method-start">10131 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">close</span>
-                <span class="method-start">49561 ms</span>
+                <span class="method-start">24436 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
