--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f5839f">  <td>23/07/11 16:35:02</td>   <td>0</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.Alert1@53fb3dab]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="f5839f">  <td>23/07/11 16:35:51</td>   <td>49545</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.Alert1@53fb3dab]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="bbf48f">  <td>23/07/11 16:35:32</td>   <td>29665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Alert1.AlertTest()[pri:0, instance:AutomationTesting_1.auttomation_1.Alert1@53fb3dab]">AlertTest</td> 
-  <td>main@116734858</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/12 16:54:21</td>   <td>0</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.Hover@4b013c76]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="bbf48f">  <td>23/07/12 16:54:21</td>   <td>-202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Hover.MouseHover()[pri:0, instance:AutomationTesting_1.auttomation_1.Hover@4b013c76]">MouseHover</td> 
+  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/12 16:54:15</td>   <td>-6117</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.Hover@4b013c76]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
 </table>
