--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-1910093341\testng-customsuite.xml</span>
+                    <span>C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-252820303\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationTesting_1.auttomation_1.mailautomation" class="method navigator-link" hash-for-method="automail">automail</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationTesting_1.auttomation_1.Assertion" class="method navigator-link" hash-for-method="Assertion">Assertion</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AutomationTesting_1.auttomation_1.mailautomation</span>
+              <span class="class-name">AutomationTesting_1.auttomation_1.Assertion</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="automail">
-                  </a> <!-- automail -->
-                  <span class="method-name">automail</span>
+                  <a name="Assertion">
+                  </a> <!-- Assertion -->
+                  <span class="method-name">Assertion</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-1910093341\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Tanvir.Hossain\AppData\Local\Temp\testng-eclipse-252820303\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AutomationTesting_1.auttomation_1.mailautomation&quot;/&gt;
+      &lt;class name=&quot;AutomationTesting_1.auttomation_1.Assertion&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'automail')
-data.setCell(0, 2, 'AutomationTesting_1.auttomation_1.mailautomation')
-data.setCell(0, 3, 5645);
+data.setCell(0, 1, 'Assertion')
+data.setCell(0, 2, 'AutomationTesting_1.auttomation_1.Assertion')
+data.setCell(0, 3, 8657);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AutomationTesting_1.auttomation_1.mailautomation</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AutomationTesting_1.auttomation_1.Assertion</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">start</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">automail</span>
-                <span class="method-start">12722 ms</span>
+                <span class="method-name">Assertion</span>
+                <span class="method-start">6924 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">close</span>
-                <span class="method-start">18414 ms</span>
+                <span class="method-start">15659 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
