--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f5839f">  <td>23/07/31 13:56:28</td>   <td>0</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.mailautomation@53fb3dab]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="f5839f">  <td>23/07/31 13:56:09</td>   <td>-18408</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.mailautomation@53fb3dab]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
-<tr bgcolor="bbf48f">  <td>23/07/31 13:56:22</td>   <td>-5693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="mailautomation.automail()[pri:0, instance:AutomationTesting_1.auttomation_1.mailautomation@53fb3dab]">automail</td> 
+<tr bgcolor="bbf48f">  <td>23/07/31 14:14:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assertion.Assertion()[pri:0, instance:AutomationTesting_1.auttomation_1.Assertion@53fb3dab]">Assertion</td> 
   <td>main@116734858</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/31 14:14:01</td>   <td>-6917</td> <td title="&gt;&gt;BaseDriver.start()[pri:0, instance:AutomationTesting_1.auttomation_1.Assertion@53fb3dab]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
+<tr bgcolor="f5839f">  <td>23/07/31 14:14:17</td>   <td>8735</td> <td title="&lt;&lt;BaseDriver.close()[pri:0, instance:AutomationTesting_1.auttomation_1.Assertion@53fb3dab]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116734858</td>   <td></td> </tr>
 </table>
